# prepper

./: .env.example  .gitignore  AGENTS.md  LICENSE.txt  README.md  SETUP.md  cli.sh  prepper.sh  run.sh  setup.sh
.github/instructions/: backend.instructions.md  frontend.instructions.md  prepper-cli.instructions.md  project.instructions.md
app/: README.md  pyproject.toml
app/tests/: test_admin_persistence.py  test_benchmark.py  test_chat_system_prompt.py  test_conversation.py  test_hr_assistant.py  test_hr_context.py  test_hr_context_agent_tools.py  test_hr_fixtures.py  test_hr_interview_replay.py  test_hr_interview_simulation.py  test_hr_prompt_preview.py  test_hr_retrieval.py  test_hr_tool_events.py  test_hr_tools.py  test_hr_workflow.py  test_interview.py  (+10 more)
backend/: .env.example  .gitignore  requirements.txt
docs/: hr-prototype.md
frontend/: .env.local.example  package-lock.json  package.json
prepper-cli/: .env.example  README.md  pyproject.toml
prepper-cli/src/prepper_cli/: __init__.py  benchmark.py  chat.py  cli_output.py  client.py  config.py  conversation.py  interview.py  interview_prompts.py  main.py  system_prompts.py
prepper-cli/src/prepper_cli/prompts/: behavioral_focus.md  coding_focus.md  interview_coach.md
prepper-cli/tests/: test_benchmark.py  test_chat_system_prompt.py  test_config.py  test_interview.py  test_main_system_prompt.py  test_smoke.py  test_system_prompts.py
tools/: bootstrap.py  dev_runner.py  dev_server.py  dev_servers.py  local_cli.py  option_browser.py  suite_runner.py  test_dev_runner.py  test_local_cli.py  test_runner.py
(+85 files in other folders)
